--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.5</version>
+                <version>2.22.2</version>
                 <configuration>
                     <skip>true</skip>
                 </configuration>
@@ -133,12 +133,12 @@
                     <fork>true</fork>
                 </configuration>
             </plugin>
-            <!--MyBatis-generator  MBG插件-->
-            <plugin>
-                <groupId>org.mybatis.generator</groupId>
-                <artifactId>mybatis-generator-maven-plugin</artifactId>
-                <version>1.3.6</version>
-            </plugin>
+<!--            &lt;!&ndash;MyBatis-generator  MBG插件&ndash;&gt;-->
+<!--            <plugin>-->
+<!--                <groupId>org.mybatis.generator</groupId>-->
+<!--                <artifactId>mybatis-generator-maven-plugin</artifactId>-->
+<!--                <version>1.3.6</version>-->
+<!--            </plugin>-->
         </plugins>
     </build>
 
